data/derived/sp14/progs/unify/prog0956.ml.out
Characters 250-251:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type (int * int) list -> int * int -> int * int
       but an expression was expected of type
         (int * int) list -> int * int -> (int * int) list
       Type int * int is not compatible with type (int * int) list 
